header issue fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 
-    <header class="header-section">
+    <header class="header-section" >
         <img src="../assets/images/Logo.png" class="logo-image">
         <div class="section-heading-text">Windows Server 2008 End of Life Call Guide</div>
     </header>
 
     <!-- page1 html start here -->
     <div class="information">
-        <div class="left-side-section" *ngIf=isLandingPage>
+        <div class="left-side-section" *ngIf=isLandingPage id="left-side-section">
             <div class="accordion-container">
                 <app-accordion></app-accordion>
             </div>
