--- a/src/styles.scss
+++ b/src/styles.scss
@@ -197,14 +197,13 @@ input, textarea{
 }
 
 .header-section {
-    height: 100px;
     background: white;
-    padding: 0px 35px;
+    padding: 20px 35px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 2;
-    position: fixed;
+    // position: fixed;
     width: 100%;
     border-bottom: 1px solid #979797;
 }
@@ -307,8 +306,6 @@ input, textarea{
 .information {
 	display: flex;
     justify-content: center;
-    position: relative;
-    top: 100px;
 
 }
 
