--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,7 +177,12 @@ body, main, app-root {
 .pl-20 {
   padding-left: 20px;
 }
-
+.rotate-45 {
+  transform: rotate(50deg);
+}
+.cursor-pointer {
+  cursor: pointer;
+}
 
 
 
