--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -69,8 +69,8 @@ input[type=checkbox] + label:before {
     pointer-events: none;
 }
 
-.changeColor{
-    /* background-color: #ffffff; */
+.disabled-nav{
+    background-color: #468c98;
 }
 
 .checkbox-helpfield-section{
