--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -140,7 +140,7 @@
         
     </div>
     <div class="right-nav" [ngClass]="{'disable':!metaData.matadata}">
-        <div class="right-nav-button-wrapper" [ngClass]="{'changeColor':!metaData.matadata}">
+        <div class="right-nav-button-wrapper" [ngClass]="{'disabled-nav':!metaData.matadata}">
             <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
                 <img (click)="closeSideNav()" class="side-nav-icon" src="/assets/images/icon_arrow.png">
             </div>
