--- a/src/styles.scss
+++ b/src/styles.scss
@@ -259,8 +259,7 @@ input, textarea{
 }
 
 .common-label-padding{
-    display: block;
-    padding-bottom: 10px;
+    display: block;    
     font-size: 20px;
     font-weight: 600;
 }
@@ -271,6 +270,7 @@ input, textarea{
 	justify-content: flex-end;
     text-align: center;
     margin-top:30px;
+    align-self: flex-end;
 }
 
 .button-styling {
