some changes to update paths

--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -9,7 +9,7 @@
         </div>
         <div>
           <div class="button-styling prev-arrow-button" (click)="takeQuestion(question)">Return to question<img
-              class="prev-arrow" src="/assets/images/icon_arrow.png"></div>
+              class="prev-arrow" src="./assets/images/icon_arrow.png"></div>
         </div>
       </div>
     </div>
@@ -21,11 +21,11 @@
 <div class="common-button-styles">
               <div class="button-styling prev-arrow-button" (click)="previousQuestion()">
                   Previous
-                  <img class="prev-arrow" src="../..//assets/images/icon_arrow.png">
+                  <img class="prev-arrow" src="./assets/images/icon_arrow.png">
               </div>
       <div class="button-styling finish-button" (click)="finishQuestionaire()">
         Finish
-        <img class="next-arrow" src="../..//assets/images/icon_arrow.png">
+        <img class="next-arrow" src="./assets/images/icon_arrow.png">
       </div>
   </div>
 </section>
