--- a/src/app/components/dummy.html
+++ b/src/app/components/dummy.html
@@ -46,7 +46,7 @@
   </div> -->
     <!-- common button -->
     <div class="common-button-styles">
-        <div class="button-styling">Get Started<img class="next-arrow" src="/assets/images/icon_arrow.png">
+        <div class="button-styling">Get Started<img class="next-arrow" src="./assets/images/icon_arrow.png">
         </div>
 
     </div>
@@ -135,8 +135,8 @@
 
     <div class="common-button-styles">
         <div class="button-styling prev-arrow-button">Previous<img class="prev-arrow"
-                src="/assets/images/icon_arrow.png"></div>
-        <div class="button-styling">Next<img class="next-arrow" src="/assets/images/icon_arrow.png"></div>
+                src="./assets/images/icon_arrow.png"></div>
+        <div class="button-styling">Next<img class="next-arrow" src="./assets/images/icon_arrow.png"></div>
     </div>
     <div class='skipped-questions'>
         <div class="question border-bottom">
@@ -145,7 +145,7 @@
             </div>
             <div>
                 <div class="button-styling prev-arrow-button">Return to question<img class="prev-arrow"
-                        src="/assets/images/icon_arrow.png"></div>
+                        src="./assets/images/icon_arrow.png"></div>
             </div>
         </div>
         <div class="question border-bottom">
@@ -154,7 +154,7 @@
             </div>
             <div>
                 <div class="button-styling prev-arrow-button">Return to question<img class="prev-arrow"
-                        src="/assets/images/icon_arrow.png"></div>
+                        src="./assets/images/icon_arrow.png"></div>
             </div>
         </div>
         <div class="question">
@@ -163,7 +163,7 @@
             </div>
             <div>
                 <div class="button-styling prev-arrow-button">Return to question<img class="prev-arrow"
-                        src="/assets/images/icon_arrow.png"></div>
+                        src="./assets/images/icon_arrow.png"></div>
             </div>
         </div>
     </div>
@@ -183,7 +183,7 @@
             </div>
         </div>
         <div class="plus-stake-holder">
-            <img src="/assets/images/icon_Plus.png" class="icon-plus">
+            <img src="./assets/images/icon_Plus.png" class="icon-plus">
             <div class="add-stake-holder">Add stakeholder</div>
         </div>
     </div>
@@ -191,6 +191,6 @@
 
     <div class="common-button-styles">
         <div class="button-styling finish-button">Finish<img class="next-arrow"
-                src="/assets/images/icon_arrow.png">
+                src="./assets/images/icon_arrow.png">
         </div>
     </div>
