--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -28,7 +28,7 @@
                         <div class="common-button-styles" (click)="resumeSession()">
                             <div class="button-styling">
                                 Resume
-                                <img class="next-arrow" src="/assets/images/icon_arrow.png">
+                                <img class="next-arrow" src="./assets/images/icon_arrow.png">
                             </div>
                         </div>
                     </form>
@@ -55,7 +55,7 @@
                         <div class="common-button-styles">
                             <div (click)="getStarted()" class="button-styling">
                                 Get Started
-                                <img class="next-arrow" src="/assets/images/icon_arrow.png">
+                                <img class="next-arrow" src="./assets/images/icon_arrow.png">
                             </div>
                         </div>
                     </form>
