--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'text'">
                                     <label
-                                        class="input-label-text common-label-padding">{{eachOption.value[0].label}}</label>
+                                        class="input-label-text common-label-padding">Information to be sent: </label>
                                     <div class="input-element">{{eachOption.value[0].value || '--'}}</div>
                                 </div>
                             </div>
