--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -92,3 +92,15 @@ input[type=checkbox] + label:before {
     justify-content: flex-end;
     margin-bottom: 15px;
 }
+
+.confirm-text{
+    font-size: 24px;
+}
+
+.confirm-radio-text{
+    font-size: 20px;    
+}
+
+.pt-10{
+    padding-top: 10px;
+}
