--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -53,6 +53,9 @@
                                 <div class="radio-input-section" *ngIf="eachOption.addDetailsData">
                                     <div class="stake-holder-section add-details-section"
                                         *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
+                                        <div *ngIf="eachOption.addDetailsData.length > 1" class="remove-details-data-icon" (click)="removeDetailsData(eachOption.addDetailsData, formInd)">
+                                            <img class="icon-plus rotate-45" src="../assets/images/icon_Plus.png">
+                                        </div>
                                         <div class="input-section"
                                             *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
                                             <div class="input-label-text font-regular ">{{ eachFiled.label }}</div>
