--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,7 @@
 <div class="content-wrapper">
     <div class="content-section ">
         <div>
+            <section>
                 <form>
                     <div class="section-heading-text common-heading-padding hpe-question">{{currentFormData.question}}
                     </div>
