Add success and error messages

--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -1,3 +1,8 @@
+<section class="conclusion-section error-message-section">
+    <div class="message-section">
+        <span class="error-message-text">There was an error with your submission, please try again</span>
+    </div>
+</section>
 <section class="conclusion-section">
   <div *ngIf="unansweredQuestions.length">
     <div class="thankyou-msg">Thank you for taking the time to speak with me today.</div>
