--- a/src/app/components/conclusion/conclusion.component.css
+++ b/src/app/components/conclusion/conclusion.component.css
@@ -32,3 +32,20 @@
     left: 8px;
     transform: rotate(180deg);
 }
+
+.error-message-section {
+    background: none;
+    padding: 0;
+}
+
+.message-section {
+    border: 4px solid #FF8D6D;
+    margin: 0;
+}
+
+.error-message-text {
+    font-size: 34px;
+    line-height: 29px;
+    margin-bottom:22px;
+    font-weight: 500;
+}
