--- a/src/styles.scss
+++ b/src/styles.scss
@@ -700,3 +700,10 @@ app-form {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.message-section {
+    background-color: #fff;
+    border: 4px solid #2AD2C9;
+    padding: 40px 20px 40px 80px;
+    margin: 25px 30px;
+}
