Fixed close button path issue.

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -54,7 +54,7 @@
                                     <div class="stake-holder-section add-details-section"
                                         *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
                                         <div *ngIf="eachOption.addDetailsData.length > 1" class="remove-details-data-icon" (click)="removeDetailsData(eachOption.addDetailsData, formInd)">
-                                            <img class="icon-plus rotate-45" src="../assets/images/icon_Plus.png">
+                                            <img class="icon-plus rotate-45" src="/assets/images/icon_Plus.png">
                                         </div>
                                         <div class="input-section"
                                             *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
